# tajo

tajo-catalog/tajo-catalog-common/src/main/java/org/apache/tajo/catalog/: Schema.java
tajo-client/src/main/java/org/apache/tajo/cli/tsql/: TajoCli.java
tajo-client/src/main/java/org/apache/tajo/client/: QueryClient.java  QueryClientImpl.java  TajoClientImpl.java
tajo-client/src/main/proto/: QueryMasterClientProtocol.proto
tajo-common/src/main/java/org/apache/tajo/conf/: TajoConf.java
tajo-common/src/main/java/org/apache/tajo/datum/: DateDatum.java
tajo-common/src/main/java/org/apache/tajo/storage/: StorageConstants.java
tajo-common/src/main/java/org/apache/tajo/util/: JsonUtil.java  StopWatch.java
tajo-core/: generate_jni_headers.sh  pom.xml
tajo-core/src/main/java/org/apache/tajo/engine/planner/: PhysicalPlannerImpl.java  Projector.java
tajo-core/src/main/java/org/apache/tajo/engine/planner/physical/: AggregationExec.java  BNLJoinExec.java  BSTIndexScanExec.java  BinaryPhysicalExec.java  DistinctGroupbyFirstAggregationExec.java  DistinctGroupbyHashAggregationExec.java  DistinctGroupbySecondAggregationExec.java  DistinctGroupbySortAggregationExec.java  DistinctGroupbyThirdAggregationExec.java  EvalExprExec.java  ExternalSortExec.java  HashAggregateExec.java  HashBasedColPartitionStoreExec.java  HashFullOuterJoinExec.java  HashJoinExec.java  HashLeftAntiJoinExec.java  HashLeftOuterJoinExec.java  HashLeftSemiJoinExec.java  HashShuffleFileWriteExec.java  HavingExec.java  LimitExec.java  MemSortExec.java  MergeFullOuterJoinExec.java  MergeJoinExec.java  NLJoinExec.java  NLLeftOuterJoinExec.java  PartitionMergeScanExec.java  PhysicalExec.java  ProjectionExec.java  RangeShuffleFileWriteExec.java  RightOuterMergeJoinExec.java  SelectionExec.java  SeqScanExec.java  SortAggregateExec.java  SortBasedColPartitionStoreExec.java  StoreTableExec.java  TunnelExec.java  UnaryPhysicalExec.java  UnionExec.java  WindowAggExec.java
tajo-core/src/main/java/org/apache/tajo/engine/utils/: QueryProfiler.java  TupleCacheScanner.java
tajo-core/src/main/java/org/apache/tajo/querymaster/: QueryMaster.java
tajo-core/src/main/java/org/apache/tajo/util/: JSPUtil.java
tajo-core/src/main/java/org/apache/tajo/worker/: TajoWorkerClientService.java  TajoWorkerManagerService.java  Task.java  TaskAttemptContext.java
tajo-core/src/main/proto/: Plan.proto  TajoWorkerProtocol.proto
tajo-core/src/native/: CMakeLists.txt
tajo-core/src/native/cmake_modules/: FindFlatbuffer.cmake  FindGFlags.cmake  FindGLog.cmake  FindGTest.cmake  FindHDFS.cmake  FindJson.cmake  FindLibUV.cmake  FindLlvm.cmake  FindPProf.cmake  FindProtobuf.cmake  FindRE2.cmake  FindSSE.cmake  FindSnappy.cmake
tajo-core/src/native/extlib/: thirdparty.sh
tajo-core/src/native/src/: CMakeLists.txt
tajo-core/src/native/src/common/: datatypes.cc  datatypes.h  logging.h  macro.h  schema.cc  schema.h  status.cc  status.h  stringpiece.cc  stringpiece.h  types-inl.h
tajo-core/src/native/src/eval/: eval_node.cc  eval_node.h
tajo-core/src/native/src/exec/: delim_fields_parser.cc  delim_fields_parser.h  scanner.h  text_scanner.cc  text_scanner.h
tajo-core/src/native/src/io/: file_stream.cc  file_stream.h  hdfs_file_stream.cc  hdfs_file_stream.h  in_mem_stream.cc  in_mem_stream.h  stream.h
tajo-core/src/native/src/jni/: jni.cc  org_apache_tajo_worker_Task.h
tajo-core/src/native/src/main/: engine.cc
tajo-core/src/native/src/plan/: logical_node.cc  logical_node.h  logical_plan_builder.cc  logical_plan_builder.h
tajo-core/src/native/src/proto/: CatalogProtos.proto  DataTypes.proto  RpcProtos.proto  TestProtocol.proto  TestProtos.proto
tajo-core/src/native/src/rpc/: rpc_utils.h  tcp_rpc_channel.cc  tcp_rpc_channel.h  tcp_rpc_controller.h  tcp_rpc_server.cc  tcp_rpc_server.h
tajo-core/src/native/src/util/: compiler.h  memory.cc  memory.h  simd-util.h  singleton.h
tajo-core/src/native/src/vector/: map_plus_primitives.cc  map_plus_primitives.h  vectors.cc  vectors.h
tajo-dist/: pom.xml
tajo-dist/src/main/conf/: tajo-env.sh
tajo-storage/: pom.xml
tajo-storage/src/main/java/org/apache/tajo/storage/: AbstractStorageManager.java  CSVFile.java  FileScanner.java  MergeScanner.java  RawFile.java  Scanner.java
tajo-storage/src/main/java/org/apache/tajo/storage/fragment/: FileFragment.java
tajo-storage/src/main/java/org/apache/tajo/storage/v2/: CSVFileScanner.java  FileScannerV2.java
tajo-storage/tajo-storage-cassandra/: pom.xml
tajo-storage/tajo-storage-cassandra/src/main/java/org/apache/tajo/storage/cassandra/: CassandraStorageConstants.java  CassandraStorageManager.java
tajo-storage/tajo-storage-common/src/main/java/org/apache/tajo/storage/: ProfileContext.java
tajo-storage/tajo-storage-common/src/main/resources/: storage-default.xml
tajo-storage/tajo-storage-hdfs/: pom.xml
tajo-storage/tajo-storage-hdfs/src/main/java/org/apache/tajo/storage/: CSVFile.java  RawFile.java
tajo-storage/tajo-storage-hdfs/src/main/java/org/apache/tajo/storage/orc/: OrcScanner.java
